<resources>
    <string name="app_name">My Contact List</string>
    <string name="button_to_display_a_list_of_contacts">list of contacts</string>
    <string name="button_to_display_settings">display settings</string>
    <string name="button_to_display_map">display map</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="save">Save</string>
    <string name="scrollable_content_section">Scrollable content section</string>
    <string name="contact">Contact:</string>
    <string name="name">Name</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_cell_phone_number">Enter Cell phone number</string>
    <string name="email_address">Email Address:</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="map_details">Contact Map Location</string>
    <string name="contact_settings">Contact Settings</string>
    <string name="map_layout">Map Layout</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="birthday_btn">Birthday</string>
    <string name="city_bth">City</string>
    <string name="name_bth">Name</string>
    <string name="sort_order">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>